--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
   <div class="container">
       <div class="row">
         <div class="col-sm-1 text-beginning">
-          <a href="/about.html">About</a>
+          <a href="/about.html">about</a>
         </div>
         <div class="col-sm-1 text-beginning">
-        <a href="/myProjects.html">Projects</a>
+        <a href="/myProjects.html">projects</a>
         </div>
       <div class="col-sm-1 text-beginning">
-      <a href="/contactMe.html">Contact</a>
+      <a href="/contactMe.html">contact</a>
       </div>
       </div>
     </div>
     <div class="content">
       <h2 class="text-center">Hello. I'm<h2>
-        <h1 class="text-center">Alisha White</h1>
+        <h1 class="text-center">alisha White</h1>
       <h3 class="text-center">
-       Front End Developer <br />Based in
-        Alexandria, Virginia
+       front end developer <br />based in
+        alexandria, virginia
       </h3>
       <div class="icon">
       <a href="https://www.linkedin.com/in/alisha-white-msn-rnc-4321a6134/"
