--- a/index.html
+++ b/index.html
@@ -17,25 +17,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@100&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/be6f857cb0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
   <div class="container">
       <div class="row">
-        <div class="col-sm-1 text-beginning">
+        <div class="col-sm-2 text-beginning">
           <a href="/about.html">about</a>
         </div>
-        <div class="col-sm-1 text-beginning">
+        <div class="col-sm-2 text-beginning">
         <a href="/myProjects.html">projects</a>
         </div>
-      <div class="col-sm-1 text-beginning">
+      <div class="col-sm-2 text-beginning">
       <a href="/contactMe.html">contact</a>
       </div>
       </div>
     </div>
-    <div class="content">
+    <div class="container">
+    <div class="content d-lg-block">
       <h2 class="text-center">Hello. I'm<h2>
         <h1 class="text-center">alisha White</h1>
       <h3 class="text-center">
@@ -44,10 +47,42 @@
       </h3>
       <div class="icon">
       <a href="https://www.linkedin.com/in/alisha-white-msn-rnc-4321a6134/"
-      ><i class="fa-brands fa-linkedin fa-2xl" style="color: #c47f08;"></i></i>
+      ><i class="fa-brands fa-linkedin fa-2xl" style="color: #c47f08;"></i>
     </i>
     </a>
     </div>
-  </h2>
+  </div>
+  </div>
+  <p class="text-center m-5">featured projects</p>
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col d-lg-block">
+        <img src="images/hendrixApp.png" class="img-fluid" alt=""/>
+      </div>
+    <div class="col">
+      <div class="project-description">
+        <h2 class="text-center mb-5">Animal Project</h2>
+        <p class="text-center m-5 text-muted">
+          Insert text about project
+        </p>
+        <a href="ADD-LINK">see more</a>
+      </div>
+    </div>
+
+ <div class="container">
+    <div class="row mb-5">
+      <div class="col d-lg-block">
+        <img src="images/weatherApp.png" class="img-fluid" alt=""/>
+      </div>
+    <div class="col">
+      <div class="project-description">
+        <h2 class="text-center mb-5">weather app</h2>
+        <p class="text-center m-5 text-muted">
+          Insert text about project
+        </p>
+        <a href="ADD-LINK">see more</a>
+      </div>
+    </div>
+    
   </body>
 </html>
