Updated HTML, and added padding to hero
Removed navigation bar, added padding to hero, removed Animal App from portfolio

--- a/index.html
+++ b/index.html
@@ -24,26 +24,13 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-  <div class="container">
-      <div class="row">
-        <div class="col-sm-2 text-beginning">
-          <a href="/about.html">about</a>
-        </div>
-        <div class="col-sm-2 text-beginning">
-        <a href="/myProjects.html">projects</a>
-        </div>
-      <div class="col-sm-2 text-beginning">
-      <a href="/contactMe.html">contact</a>
-      </div>
-      </div>
-    </div>
     <div class="container">
     <div class="content d-lg-block">
       <h2 class="text-center">Hello. I'm<h2>
-        <h1 class="text-center">alisha White</h1>
+        <h1 class="text-center">Alisha White</h1>
       <h3 class="text-center">
-       front end developer <br />based in
-        alexandria, virginia
+       Future front end developer <br />based in
+        Alexandria, Virginia
       </h3>
       <div class="icon">
       <a href="https://www.linkedin.com/in/alisha-white-msn-rnc-4321a6134/"
@@ -53,36 +40,20 @@
     </div>
   </div>
   </div>
-  <p class="text-center m-5">featured projects</p>
-  <div class="container">
-    <div class="row mb-5">
-      <div class="col d-lg-block">
-        <img src="images/hendrixApp.png" class="img-fluid" alt=""/>
-      </div>
-    <div class="col">
-      <div class="project-description">
-        <h2 class="text-center mb-5">Animal Project</h2>
-        <p class="text-center m-5 text-muted">
-          Insert text about project
-        </p>
-        <a href="ADD-LINK">see more</a>
-      </div>
-    </div>
-
+  <p class="text-center m-5">Featured Projects</p>
  <div class="container">
     <div class="row mb-5">
       <div class="col d-lg-block">
-        <img src="images/weatherApp.png" class="img-fluid" alt=""/>
+        <img src="images/weatherApp.png" class="img-fluid rounded" alt=""/>
       </div>
     <div class="col">
       <div class="project-description">
-        <h2 class="text-center mb-5">weather app</h2>
+        <h2 class="text-center mb-5">Weather App</h2>
         <p class="text-center m-5 text-muted">
-          Insert text about project
+         Showcases use of code editors, advanced HTML, advanced CSS, Javascript, APIs, Bootstrap, Github, and hosting,
         </p>
-        <a href="ADD-LINK">see more</a>
+        <a href="https://astounding-squirrel-cca8f8.netlify.app/" class="btn btn-see-more">See More</a>
       </div>
     </div>
-    
   </body>
 </html>
