updated bootstrap for image

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
   <p class="text-center m-5">Featured Projects</p>
  <div class="container">
     <div class="row mb-5">
-      <div class="col d-lg-block">
+      <div class="col d-none d-lg-block">
         <img src="images/weatherApp.png" class="img-fluid rounded" alt=""/>
       </div>
     <div class="col">
       <div class="project-description">
         <h2 class="text-center mb-5">Weather App</h2>
         <p class="text-center m-5 text-muted">
-         Showcases use of code editors, advanced HTML, advanced CSS, Javascript, APIs, Bootstrap, Github, and hosting,
+         Showcases use of code editors, advanced HTML, advanced CSS, Javascript, APIs, Bootstrap, Github, and hosting
         </p>
         <a href="https://astounding-squirrel-cca8f8.netlify.app/" class="btn btn-see-more">See More</a>
       </div>
