updated CSS and HTML

--- a/index.html
+++ b/index.html
@@ -15,44 +15,55 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/be6f857cb0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/be6f857cb0.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-    <div class="content d-lg-block">
-      <h2 class="text-center">Hello. I'm<h2>
+      <div class="content d-lg-block">
+        <h2 class="text-center">Hello. I'm</h2>
         <h1 class="text-center">Alisha White</h1>
-      <h3 class="text-center">
-       Future front end developer <br />based in
-        Alexandria, Virginia
-      </h3>
-      <div class="icon">
-      <a href="https://www.linkedin.com/in/alisha-white-msn-rnc-4321a6134/"
-      ><i class="fa-brands fa-linkedin fa-2xl" style="color: #c47f08;"></i>
-    </i>
-    </a>
-    </div>
-  </div>
-  </div>
-  <p class="text-center m-5">Featured Projects</p>
- <div class="container">
-    <div class="row mb-5">
-      <div class="col d-none d-lg-block">
-        <img src="images/weatherApp.png" class="img-fluid rounded" alt=""/>
+        <h3 class="text-center">
+          Future front end developer <br />based in Alexandria, Virginia
+        </h3>
+        <div class="icon">
+          <a href="https://www.linkedin.com/in/alisha-white-msn-rnc-4321a6134/"
+            ><i class="fa-brands fa-linkedin fa-2xl" style="color: #c47f08"></i>
+          </a>
+        </div>
       </div>
-    <div class="col">
-      <div class="project-description">
-        <h2 class="text-center mb-5">Weather App</h2>
-        <p class="text-center m-5 text-muted">
-         Showcases use of code editors, advanced HTML, advanced CSS, Javascript, APIs, Bootstrap, Github, and hosting
-        </p>
-        <a href="https://astounding-squirrel-cca8f8.netlify.app/" class="btn btn-see-more">See More</a>
+    </div>
+    <p class="text-center m-5">Featured Projects</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/weatherApp.png" class="img-fluid rounded" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="text-center mb-5">Weather App</h2>
+            <p class="text-center m-5 text-muted">
+              Showcases use of code editors, advanced HTML, advanced CSS,
+              Javascript, APIs, Bootstrap, Github, and hosting
+            </p>
+            <a
+              href="https://astounding-squirrel-cca8f8.netlify.app/"
+              class="btn btn-see-more"
+              >See More</a
+            >
+          </div>
+        </div>
       </div>
     </div>
   </body>
