--- a/about.html
+++ b/about.html
@@ -4,15 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Alisha</title>
+    <title>Alisha White</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/be6f857cb0.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="https://www.linkedin.com/in/alisha-white-msn-rnc-4321a6134/"
-      ><i class="fa-brands fa-linkedin fa-2xl" style="color: #4f4d4a"> </i>
-    </a>
+    <div class="about-section container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="about-section-content">
+            <h1 class="mb-4">Hello. I'm Alisha White</h1>
+            <h2 class="mb-4">
+              Front End Developer based in Alexandria, Virginia
+            </h2>
+            <p class="mb-5">
+              Who I am <br />
+              what I'm doing <br />How I got here <br />Where I want to go next
+            </p>
+            <a href="" class="btn view-projects">View my projects</a>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img src="images/headshot.jpg" class="img-fluid" width="600" height="700" />
+        </div>
+      </div>
   </body>
 </html>
