--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2 class="text-center">Hello. I'm</h2>
         <h1 class="text-center">Alisha White</h1>
         <h3 class="text-center">
-          Future front end developer <br />based in Alexandria, Virginia
+          Front end developer <br />based in Alexandria, Virginia
         </h3>
         <div class="icon">
           <a href="https://www.linkedin.com/in/alisha-white-msn-rnc-4321a6134/"
