Created "work" page. Updated CSS

--- a/work.html
+++ b/work.html
@@ -23,31 +23,23 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/be6f857cb0.js"
-      crossorigin="anonymous"
-    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="about-content container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="about-section">
-            <h1 class="mb-4">Hello. I'm Alisha White</h1>
-            <h2 class="mb-4">
-              Front End Developer based in Alexandria, Virginia
-            </h2>
-            <p class="mb-5">
-              Who I am <br />
-              what I'm doing <br />How I got here <br />Where I want to go next
+    <div class="content-container container">
+      <div class="work-content">
+        <h1 class="mb-5 text-center">Take a Look at my Work</h1>
+        <div class="row">
+          <div class="col-6">
+            <img src="images/weatherApp.png" class="img-fluid" />
+            <h3 class="mt-4 text-center">Weather App</h3>
+            <p>
+              Built with advanced HTML, advanced CSS, Javascript, APIs, and
+              Bootstrap
             </p>
-            <a href="" class="btn view-projects">View my projects</a>
           </div>
         </div>
-        <div class="col-lg-6">
-          <img src="images/headshot.jpg" class="img-fluid" width="600" height="700" />
-        </div>
       </div>
+    </div>
   </body>
 </html>
