Added contact page html and css

--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
   </head>
   <body>
     <div class="container">
+      <nav class="d-flex justify-content-between">
+        <ul>
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/work.html">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="container">
       <div class="content d-lg-block">
         <h2 class="text-center">Hello. I'm</h2>
         <h1 class="text-center">Alisha White</h1>
