--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Alisha White</title>
+    <title>Alisha White</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,7 +29,8 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>  <div class="container">
+  <body>
+    <div class="container">
       <nav class="d-flex justify-content-between">
         <ul>
           <li>
@@ -47,24 +48,16 @@
         </ul>
       </nav>
     </div>
-    <div class="about-content container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="about-section">
-            <h1 class="mb-4">Hello. I'm Alisha White</h1>
-            <h2 class="mb-4">
-              Front End Developer based in Alexandria, Virginia
-            </h2>
-            <p class="mb-5">
-              Who I am <br />
-              what I'm doing <br />How I got here <br />Where I want to go next
-            </p>
-            <a href="" class="btn view-projects">View my projects</a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/headshot.jpg" class="img-fluid" width="600" height="700" />
-        </div>
+    <div class="content d-lg-block">
+      <h1>Lets Work Together</h1>
+      <div class="centerdiv">
+        <a href="https://www.linkedin.com/in/alisha-white-msn-rnc-4321a6134/">
+          <i class="fa-brands fa-linkedin fa-2xl" style="color: #c47f08"></i>
+        </a>
+        <a href="mailto:lishamichelle269@gmail.com">
+          <i class="fa-solid fa-envelope fa-2xl" style="color: #c47f08"></i
+        ></a>
       </div>
+    </div>
   </body>
 </html>
